fixed z-index bug for search bar

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -1045,6 +1045,8 @@ textarea
       font-size: 13px
 
 .feed-settings-tabs
+  z-index: 0
+  position: relative
   ul
     list-style: none outside none
     height: 18px
@@ -1803,7 +1805,7 @@ textarea
     .buttonStyle2.following:hover
       span
         background-position: -34px -1px !important
-    
+
 .clear
   clear: both
 
@@ -1838,10 +1840,10 @@ textarea
       position: relative
       right: 11px
 
-.users 
+.users
   #side-bar
     background: #efeeed
-  .user-vcard 
+  .user-vcard
     background: #efeeed
     .info
       h2
@@ -1863,7 +1865,7 @@ textarea
       text-shadow: 0px -1px 0px #000
 
 
-.numHolder 
+.numHolder
   background: url('/css/images/water_nums.png') no-repeat
   float: left
   height: 71px
@@ -1871,25 +1873,25 @@ textarea
   position: relative
   z-index: 10
 
-.users .numHolder 
+.users .numHolder
   background-position: 0px 80px
 
-.users  
-  .waterNumHolder 
+.users
+  .waterNumHolder
     .noise-overlay
       display: none
-      
-.nonBlank_false 
+
+.nonBlank_false
   opacity: 0
   filter: alpha(opacity = 0)
 
-.waterNum 
+.waterNum
   overflow: hidden
   position: relative
   height: 71px
   display: inline-block
 
-.the_water 
+.the_water
   position: absolute
   height: 100%
   width: 100%
@@ -1898,7 +1900,7 @@ textarea
   z-index: 1
   top: 0px
 
-.water_bg_color 
+.water_bg_color
   position: absolute
   height: 100%
   width: 100%
@@ -1920,11 +1922,11 @@ textarea
 
 .clear
   clear:both
-  
+
 .score-digits
   position: relative
   left: 17px
-      
+
 [data-widget = 'track-search'] [data-widget = 'results'],
 [data-widget = 'global-search'] [data-widget = 'results'],
 [data-widget = 'quick-splash'] [data-widget = 'box'],
